<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_white_border_12"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/iconChooseRole"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_choose_role"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/tell_me_who_you_are"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconChooseRole" />

        <TextView
            android:id="@+id/textDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:text="@string/before_we_get_started_let_us_survey_your_career"
            android:textColor="#959595"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/textTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/textDes">

            <TextView
                android:id="@+id/buttonTeacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_teacher_choose_role"
                android:fontFamily="@font/inter_semi_bold"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/teacher"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_1sdp" />

            <TextView
                android:id="@+id/buttonStudent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_student_choose_role"
                android:fontFamily="@font/inter_semi_bold"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/student"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>