<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_screen_primary">

        <ImageView
            android:id="@+id/iconOnBoarding"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/bg_circle_primary"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/icon_light_onboarding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/created_an_account"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintStart_toStartOf="@id/iconOnBoarding"
            app:layout_constraintTop_toBottomOf="@id/iconOnBoarding" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/create_your_account_it_takes_less_than_a_minute_enter_your_email_and_password"
            android:textColor="#959595"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/textCreateAccount" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:autofillHints="false"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/text_dark"
            android:textColorHint="#959595"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/textDescription" />

        <EditText
            android:id="@+id/edtUseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:autofillHints="false"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/text_dark"
            android:textColorHint="#959595"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:autofillHints="false"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/text_dark"
            android:textColorHint="#959595"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/edtUseName" />

        <TextView
            android:id="@+id/btnCreateAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_btn_create_account"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/created_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

        <TextView
            android:id="@+id/textOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/or"
            android:textColor="#959595"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCreateAnAccount" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="#959595"
            app:layout_constraintBottom_toBottomOf="@id/textOr"
            app:layout_constraintEnd_toStartOf="@id/textOr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textOr" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="#959595"
            app:layout_constraintBottom_toBottomOf="@id/textOr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textOr"
            app:layout_constraintTop_toTopOf="@id/textOr" />

        <LinearLayout
            android:id="@+id/layoutOtherSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textOr">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:src="@drawable/ic_github" />

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:src="@drawable/ic_fb" />

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:src="@drawable/ic_google" />

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_insta" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/login"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>